--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -72,6 +72,7 @@
     <dimen name="dimen_300">300dp</dimen>
     <dimen name="font_9sp">9sp</dimen>
     <dimen name="dimen_125">125dp</dimen>
+    <dimen name="dimen_13">13dp</dimen>
 
 
 </resources>
