--- a/app/src/main/res/layout/activity_fitness_center_booking_summary.xml
+++ b/app/src/main/res/layout/activity_fitness_center_booking_summary.xml
@@ -44,7 +44,7 @@
                         android:layout_marginStart="@dimen/margin_16dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Bard Cencer"
+                        android:text=""
                         android:textSize="@dimen/font_14sp"
                         android:textColor="@color/colorPrimaryDark"
                         android:fontFamily="@font/avenir_black" />
@@ -70,7 +70,7 @@
                             android:layout_height="wrap_content"
                             android:text=""
                             android:textSize="@dimen/font_12sp"
-                            android:textColor="@color/colorText"
+                            android:textColor="@color/colorHeadingText"
                             android:fontFamily="@font/avenir_light"
                             android:layout_gravity="center_vertical"
                             android:layout_marginStart="@dimen/dimen_5"/>
@@ -300,7 +300,7 @@
                         android:fontFamily="@font/avenir_light"
                         android:text=""
                         android:layout_marginTop="@dimen/margin_8dp"
-                        android:textColor="@color/colorTextLightDark"
+                        android:textColor="@color/colorTextHeading"
                         android:textSize="12sp" />
 
                     <TextView
@@ -331,7 +331,7 @@
                         android:layout_alignParentStart="true"
                         android:fontFamily="@font/avenir_light"
                         android:text=""
-                        android:textColor="@color/colorTextLightDark"
+                        android:textColor="@color/colorTextHeading"
                         android:textSize="12sp" />
 
                     <TextView
@@ -340,7 +340,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:fontFamily="@font/avenir_black"
-                        android:text="SAR 20"
+                        android:text=""
                         android:textAllCaps="true"
                         android:textColor="@color/colorTextLightDark"
                         android:textSize="13sp" />
@@ -448,7 +448,7 @@
             android:paddingBottom="@dimen/margin_12dp"
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginEnd="@dimen/margin_16dp"
-            android:text="Pay SAR 400"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="14sp"
             android:textAllCaps="false"/>
