--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -81,6 +81,15 @@
         <item name="android:windowExitAnimation">@anim/slide_out_right1</item>
     </style>
 
+    <style name="TabLayout" parent="Theme.AppCompat">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:fontFamily">@font/avenir_black</item>
+        <item name="android:textSize">12sp</item>
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorControlNormal">@color/colorTextLightDark</item>
+        <item name="colorControlActivated">@color/colorAccent</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 
 
 </resources>
