--- a/app/src/main/res/layout/activity_fitness_center_booking_summary.xml
+++ b/app/src/main/res/layout/activity_fitness_center_booking_summary.xml
@@ -316,6 +316,38 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/rltOfferDiscount"
+                    android:visibility="gone"
+                    android:layout_marginEnd="@dimen/margin_16dp"
+                    android:layout_marginStart="@dimen/dimen_20"
+                    android:layout_marginTop="@dimen/margin_8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/tvOfferPercentage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:fontFamily="@font/avenir_light"
+                        android:text="Discount 20%"
+                        android:textColor="@color/colorTextHeading"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:id="@+id/tvOfferPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:fontFamily="@font/avenir_black"
+                        android:text="80"
+                        android:textAllCaps="true"
+                        android:textColor="@color/colorTextLightDark"
+                        android:textSize="13sp" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
                     android:id="@+id/rlPackageVat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
