--- a/app/src/main/res/layout/row_up_coming_booking.xml
+++ b/app/src/main/res/layout/row_up_coming_booking.xml
@@ -63,8 +63,8 @@
 
             <com.github.siyamed.shapeimageview.RoundedImageView
                 android:id="@+id/ivCenterImage"
-                android:layout_width="@dimen/dimen_100"
-                android:layout_height="@dimen/dimen_100"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:siBorderColor="@color/white"
                 android:src="@drawable/user"
                 app:siRadius="@dimen/dimen_10" />
@@ -77,6 +77,7 @@
                 android:padding="@dimen/dimen_5">
 
                 <TextView
+                    android:id="@+id/tvFitnessCenterName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/font_13sp"
@@ -100,10 +101,11 @@
                         android:fontFamily="@font/avenir_black" />
 
                     <TextView
+                        android:id="@+id/tvTenureName"
                         android:layout_marginTop="@dimen/margin_4dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="3 monthe plus"
+                        android:text=""
                         android:layout_marginStart="@dimen/margin_8dp"
                         android:textSize="@dimen/font_12sp"
                         android:textColor="@color/colorTextHeading"
@@ -136,7 +138,7 @@
                         android:textSize="@dimen/font_12sp"
                         android:layout_gravity="center_vertical"
                         android:gravity="center_vertical"
-                        android:text="3 Month Plus MemberShip"
+                        android:text=""
                         android:textColor="@color/colorPrimaryDark"
                         android:fontFamily="@font/avenir_black" />
 
@@ -150,6 +152,8 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lnrTrainerDeatil"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:background="@color/white"
             android:layout_marginStart="@dimen/dimen_5"
@@ -220,12 +224,8 @@
                     android:background="@drawable/select_age_bg"
                    />
 
-
             </RelativeLayout>
-
-
         </LinearLayout>
-
 
         <RelativeLayout
             android:paddingTop="@dimen/margin_16dp"
@@ -271,6 +271,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/tvBookingDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10 Aug 2021-9:30 Am"
@@ -281,6 +282,7 @@
                     android:textAlignment="viewStart" />
 
                 <TextView
+                    android:id="@+id/tvBookingPrice"
                     android:layout_alignParentEnd="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
