--- a/app/src/main/res/layout/row_up_coming_booking.xml
+++ b/app/src/main/res/layout/row_up_coming_booking.xml
@@ -274,7 +274,7 @@
                     android:id="@+id/tvBookingDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="10 Aug 2021-9:30 Am"
+                    android:text=""
                     android:layout_alignParentStart="true"
                     android:textColor="@color/colorTextHeading"
                     android:fontFamily="@font/avenir_black"
@@ -286,7 +286,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="SAR 240 "
+                    android:text=""
                     android:layout_marginEnd="@dimen/margin_16dp"
                     android:textColor="@color/colorTextHeading"
                     android:fontFamily="@font/avenir_black"
