--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -188,7 +188,7 @@
                         android:layout_marginTop="@dimen/dimen_10"
                         android:layout_marginStart="@dimen/dimen_10"
                         android:layout_marginEnd="@dimen/dimen_10"
-                        android:visibility="visible">
+                        android:visibility="gone">
 
 
                         <TextView
