--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -81,13 +81,12 @@
                                     android:layout_marginTop="@dimen/margin_4dp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="@string/tenure"
+                                    android:text="@string/booking_date"
                                     android:textSize="@dimen/font_12sp"
                                     android:textColor="@color/colorTextLightDark"
                                     android:fontFamily="@font/avenir_black" />
 
                                 <TextView
-                                    android:id="@+id/tvTenureName"
                                     android:layout_marginTop="@dimen/margin_4dp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -107,10 +106,11 @@
 
 
                                 <TextView
+                                    android:id="@+id/tvBookingDate"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textSize="@dimen/font_12sp"
-                                    android:text="@string/packages"
+                                    android:text=""
                                     android:layout_gravity="center_vertical"
                                     android:gravity="center_vertical"
                                     android:textColor="@color/colorPrimaryDark"
@@ -168,7 +168,7 @@
                             android:layout_alignParentEnd="true"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/tenure"
+                            android:text="@string/view_direction"
                             android:paddingBottom="@dimen/margin_8dp"
                             android:paddingStart="@dimen/margin_24dp"
                             android:paddingTop="@dimen/margin_8dp"
